[workspace]
members = ["matter_proc_macro"]

[package]
name = "matter"
version = "0.1.0"
edition = "2021"

[dependencies]
matter_proc_macro = { path = "matter_proc_macro" }

[profile.dev]
opt-level = 0
debug = true
lto = false
panic = "abort"

[features]
default = ["chip_error_logging", "chip_progress_logging", "chip_detail_logging", "chip_automation_logging"]
panic_handler = []
chip_config_error_source = []
chip_log_filtering = []
chip_error_logging = []
chip_progress_logging = []
chip_detail_logging = []
chip_automation_logging = []
