[workspace]
members = ["matter_proc_macro"]

[package]
name = "matter"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.9.0", default-features = false }
matter_proc_macro = { path = "matter_proc_macro" }
ecdsa = { version = "0.13.4", default-features = false }
sha2 = { version = "0.10", default-features = false }
generic-array = "0.14"
p256 = { version = "0.13.2", features = ["ecdh"] }
rand_core = { version = "0.6", default-features = false }

[dev-dependencies]

[profile.dev]
opt-level = 0
debug = true
lto = false
panic = "abort"

[features]
default = ["chip_error_logging", "chip_progress_logging", "chip_detail_logging", "chip_automation_logging", "chip_with_fault_injection", "chip_config_sha256_context_align_8"]
panic_handler = []
chip_config_error_source = []
chip_log_filtering = []
chip_error_logging = []
chip_progress_logging = []
chip_detail_logging = []
chip_automation_logging = []
chip_with_fault_injection = ["chip_with_inet_fault_injection"]
chip_with_inet_fault_injection = []
chip_config_sha256_context_align_8 = []
